delete dNote added; docs updated
